--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Page Title</title>
-<script type="module" src="./dist.browser/index.js"></script>
+
+<script type="module" src="./dist/index.js"></script>
 </head>
 <body>
 
