--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 
-<script type="module" src="./dist/index.js"></script>
+<script type="module" src="./dist.browser/index.js"></script>
 </head>
 <body>
 
